# CelestialMotionSim

./: CMakeLists.txt
include/: Planet.h  Shader.h  Simulation.h  Star.h
include/Data Structs/: TrailBuffer.h
include/Graphics/: Camera.h  CameraMovement.h  Colors.h  Renderer.h  Shader.h
include/World/: CelestialObject.h  Planet.h  Simulation.h  Star.h
planetData/: objects.json
pythonScripts/: objectsJSONCreator.py
shaders/: billboard.glsl  fragment.glsl  vertex.glsl
src/: main.cpp
src/sim/: main.cpp
